# vico-vee

./: .dockerignore  BENCHMARKS.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  kaptaind.toml  openapi.yaml
.github/workflows/: vico-vee-ci.yml  vico-vee-release.yml
benches/: throughput.rs
migrations/: 001_initial.down.sql  001_initial.sql  002_add_artifact_blob_hash.down.sql  002_add_artifact_blob_hash.sql  003_add_executions.down.sql  003_add_executions.sql  003_add_project_id.down.sql  003_add_project_id.sql
scripts/: install.sh
src/: artifact.rs  audit.rs  auth.rs  backup.rs  checkpoint.rs  config.rs  execution_store.rs  health.rs  lib.rs  limit.rs  main.rs  migrations.rs  openapi.rs  osmosis.rs  paths.rs  pattern.rs  provenance.rs  server.rs  tenant.rs  tests.rs  tls.rs  validation.rs
src/capability/: keys.rs  mod.rs  registry.rs  revocation.rs  tests.rs  types.rs  verifier.rs
src/daemon/: audit.rs  mod.rs  odin.rs  patterns.rs  runner.rs
src/sandbox/: artifacts.rs  core.rs  landlock.rs  mod.rs  seccomp.rs  types.rs
src/types/: api.rs  artifact.rs  budget.rs  capability.rs  events.rs  mod.rs  osmosis.rs  pattern.rs  provenance.rs  result.rs  schema.rs  task.rs
src/worker/: core.rs  go_tools.rs  javascript.rs  mod.rs  osmosis.rs  python.rs  rust.rs  shell.rs  wasm.rs
systemd/: vico-vee.service
tests/: integration.rs  load.rs  operations.rs
tests/common/: mod.rs
